--- a/app.json
+++ b/app.json
@@ -29,6 +29,12 @@
         {
           "cameraPermission": "The app accesses your camera to let you share them with your friends."
         }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+        }
       ]
     ]
   }
